Bug fix: correct view function - page now loading.

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,4 @@ __pycache__/
 node_modules/
 .github/
 cloudinary_python.txt
-blog-copy.html
-blog-copy2.html
-blog-post-copy.html
-comment-form.html
+junk-drawer.html
